<resources>
    <string name="app_name">Preyer App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="islom_news">Islomiy Yangiliklar</string>
    <string name="qibla">Qibla</string>
    <string name="nomoz_vaqtlari">Nomoz Vaqtlari</string>
    <string name="suggestion">Davlat yoki shahar nomini kiriting</string>
    <string name="happines">Muofaqqiyatli tugatildi</string>


    <string name="_0">0</string>
    <string name="jami">Jami:</string>
    <string name="d">/</string>
    <string name="_33">33</string>
    <string name="_00">0°</string>
    <string name="location">Location</string>

    <string name="todo">TODO</string>
    <string name="subuh">Xufton</string>
    <string name="time">time</string>
    <string name="dzuhur">Peshin</string>
    <string name="xufton">Xufton</string>
    <string name="shom">Shom</string>
    <string name="asr">Asr</string>
    <string name="peshin">Peshin</string>
    <string name="bomdod">Bomdod</string>
    <string name="prayer_app">Prayer App</string>
    <string name="tasbeh">Tasbeh</string>
    <string name="qiblani_aniqlash">Qiblani Aniqlash</string>

</resources>