<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dostonbek.preyerapp.NomozTimes"
>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/tool"
        android:backgroundTint="@color/mainColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomoz_vaqtlari"
            android:layout_gravity="center|start"
            android:layout_marginStart="10dp"
            android:textStyle="normal"
            android:textSize="25sp"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/tool"
        android:id="@+id/textinput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/city_name"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="Country or City"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/textinput"
        app:layout_constraintBottom_toBottomOf="@id/textinput"
        app:layout_constraintRight_toRightOf="@id/textinput"
        android:layout_marginEnd="10dp"
        android:id="@+id/save"
        android:src="@drawable/search"
        tools:ignore="ContentDescription" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textinput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UselessLeaf" >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/bbmm"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bomdod"
            android:textSize="20sp"
            android:layout_marginStart="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:id="@+id/subuh"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/pppmm"

            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dzuhur"
            android:textSize="20sp"
            android:layout_marginStart="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:id="@+id/dzuhur"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/asr"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asr"
            android:textSize="20sp"
            android:layout_marginStart="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:id="@+id/asr"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/shsh"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shom"
            android:textSize="20sp"
            android:layout_marginStart="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:id="@+id/maghrib"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/xxff"
android:layout_marginStart="8dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subuh"
            android:textSize="20sp"
            android:layout_marginStart="13dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:id="@+id/isya"/>
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>